--- a/figma.html
+++ b/figma.html
@@ -18,11 +18,11 @@
        <div class="header-t">  Anjaan Farmer's webesite 
 
        </div>
-       <select class="language-s">
-        <option value="en">English</option>
-        <option value="hi">Hindi></option>
-        <option value="pa">punjabi</option>
-       </select>
+       <div  class="language-s">
+        <img src="flg2.webp" alt="UK flag" class="flag-icon">
+        <p>Language</p>
+        <i class="fa-solid fa-caret-down"></i>
+        </div>
     </div>
         <div class="navbar">
             <div class="nav-logo border">
@@ -56,7 +56,31 @@
     </div>
 </div>
 
-<div class="c2">s</div>
+
+<section class="categories-section">
+  <h2>My Crops</h2>
+  <div class="crops-list">
+    <div class="crop-item">
+      <img src="crop.jpg" alt="Crop">
+      <p>Crop Name</p>
+    </div>
+    </div>
+
+  <h2>All categories</h2>
+  <div class="all-categories-list">
+    </div>
+</section>
+<section class="products-section">
+  <h2>Market Price</h2>
+  <div class="product-grid">
+    <div class="product-card">
+      <img src="product.jpg" alt="Product">
+      <h4>Product Name</h4>
+      <p>Price: $XX.XX</p>
+      <button>Add to Cart</button>
+    </div>
+    </div>
+  </section>
 
 
 
