--- a/figma.html
+++ b/figma.html
@@ -61,10 +61,26 @@
   <h2>My Crops</h2>
   <div class="crops-list">
     <div class="crop-item">
-      <img src="crop.jpg" alt="Crop">
-      <p>Crop Name</p>
+      <img src="OIP (1).jpg" alt="Crop">
+      <p> Tomato </p>
+    </div>
+    <div class="crop-item">
+        <img src="OIP (2).jpg">
+        <p>Carrot</p>
+    </div>
+    <div class="crop-item">
+    <img src="OIP (3).jpg">
+    <p>Cabbage</p>
+    </div>
+    <div class="crop-item">
+        <img src="OIP (4).jpg">
+        <p>Ginger</p>
     </div>
     </div>
+
+
+
+
 
   <h2>All categories</h2>
   <div class="all-categories-list">
