--- a/figma.html
+++ b/figma.html
@@ -56,8 +56,9 @@
     </div>
 </div>
 
-
+<!---
 <section class="categories-section">
+    <div class="my-crops-background">
   <h2>My Crops</h2>
   <div class="crops-list">
     <div class="crop-item">
@@ -76,7 +77,99 @@
         <img src="OIP (4).jpg">
         <p>Ginger</p>
     </div>
+    <div class="crop-item">
+        <img src="OIP (5).jpg">
+        <p>Cauli flower</p>
     </div>
+    <div class="crop-item">
+        <img src="OIP (6).jpg">
+        <p>Lady Finger</p>
+    </div>
+    <div class="crop-item">
+        <img src="OIP (7).jpg">
+        <p>garlic</p>
+    </div>
+    <div class="crop-item">
+        <img src="OIP (8).jpg">
+        <p>Green Chilly</p>
+    </div>
+    <div class="crop-item">
+        <img src="OIP (9).jpg" alt="">
+        <p>Spinach</p>
+    </div>
+    <div class="crop-item">
+        <img src="OIP (11).jpg">
+        <p>Onion</p>
+      </div>
+    </div>
+ </div>-->
+
+
+
+<section class="categories-section">
+    <div class="my-crops-background">
+        <div class="header-with-buttons">
+            <button class="filter-button">
+                <i class="fas fa-filter"></i> Filters
+            </button>
+            <h2>My Crops</h2>
+            <button class="add-crop-button">
+                <i class="fas fa-plus-circle"></i> Add Crop
+            </button>
+        </div>
+
+        <div class="crops-carousel">
+            <button class="carousel-arrow left-arrow">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="crops-list">
+                <div class="crop-item">
+                    <img src="OIP (1).jpg" alt="Tomato">
+                    <p>Tomato</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (2).jpg" alt="Carrot">
+                    <p>Carrot</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (3).jpg" alt="Cabbage">
+                    <p>Cabbage</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (4).jpg" alt="Ginger">
+                    <p>Ginger</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (5).jpg" alt="Cauli flower">
+                    <p>Cauli flower</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (6).jpg" alt="Lady Finger">
+                    <p>Lady Finger</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (7).jpg" alt="Garlic">
+                    <p>Garlic</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (8).jpg" alt="Green Chilly">
+                    <p>Green Chilly</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (9).jpg" alt="Spinach">
+                    <p>Spinach</p>
+                </div>
+                <div class="crop-item">
+                    <img src="OIP (11).jpg" alt="Onion">
+                    <p>Onion</p>
+                </div>
+            </div>
+            <button class="carousel-arrow right-arrow">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </div>
+    </div>
+
 
 
 
@@ -97,24 +190,6 @@
     </div>
     </div>
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     
 </body>
