--- a/figma.html
+++ b/figma.html
@@ -48,8 +48,11 @@
 
       
         <div class="c1">
-    <h1>Connect With Local Farmers</h1>
-    <p>Fresh produce directly from farms to your table. Support local agriculture and enjoy the best quality food.</p>
+    <h1>Connect With Local 
+        <br>
+        Farmers</h1>
+    <p>Fresh produce directly from farms to your table. Support local agriculture and 
+        <br>enjoy the best quality food.</p>
     <div class="cat-buttons">
         <a href="#" class="btnshop-now">Shop now</a>
         <a href="#" class="btnget-started">Get Started</a>
@@ -64,7 +67,7 @@
     <div class="my-crops-background">
         <div class="header-with-buttons">
             <button class="filter-button">
-                <i class="fas fa-filter"></i> Filters
+                <a href="Filter btn (6).png"></a> 
             </button>
             <h2>My Crops</h2>
             <button class="add-crop-button">
@@ -78,7 +81,7 @@
             </button>
             <div class="crops-list">
                 <div class="crop-item">
-                    <img src="OIP (1).jpg" alt="Tomato">
+                    <img src="t1.jpg" alt="Tomato">
                     <p>Tomato</p>
                 </div>
                 <div class="crop-item">
@@ -137,7 +140,7 @@
   <h2>Market Price</h2>
   <div class="product-grid">
     <div class="product-card">
-      <img src="product.jpg" alt="Product">
+      <img src="product.jpg " alt="Product">
       <h4>Product Name</h4>
       <p>Price: $XX.XX</p>
       <button>Add to Cart</button>
