--- a/figma.html
+++ b/figma.html
@@ -19,7 +19,7 @@
 
        </div>
        <div  class="language-s">
-        <img src="flg2.webp" alt="UK flag" class="flag-icon">
+        <img src="image 2.png" alt="UK flag" class="flag-icon">
         <p>Language</p>
         <i class="fa-solid fa-caret-down"></i>
         </div>
@@ -41,8 +41,8 @@
         <div class="navi-icon">
             <i class="fa-regular fa-heart"></i>
             <i class="fa-regular fa-circle-user"></i>
-            <i class="fa-solid fa-cart-arrow-down"></i>
-            <button class="b2">log in</button>
+            <button href="Login Button.png" class="b2">login</button>
+            
         </div>
         </div>
 
@@ -67,7 +67,7 @@
     <div class="my-crops-background">
         <div class="header-with-buttons">
             <button class="filter-button">
-                <a href="Filter btn (6).png"></a> 
+                <a href="></a> 
             </button>
             <h2>My Crops</h2>
             <button class="add-crop-button">
