--- a/f5.html
+++ b/f5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style55.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Responsive Website</title>
 </head>
@@ -22,7 +22,7 @@
                 </button>
             </div>
 
-          <!--- <div class="user-actions">
+          <div class="user-actions">
                 <span class="material-symbols-outlined">favorite</span>
                 <span class="material-symbols-outlined">person</span>
                 <span class="material-symbols-outlined">shopping_cart</span>
@@ -75,25 +75,8 @@
                 <p>Specialty: Grains & Pulses</p>
             </div>
         </div>
-    </section>-->
-    <nav class="main-nav">
-    <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
-    <label for="menu-toggle" class="hamburger-icon">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </label>
-
-    <ul class="nav-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</nav>
+    </section>
+   
 
 
 </body>
