--- a/fggg.html
+++ b/fggg.html
@@ -7,22 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-<div>
-    <img src="About Page Header Section (1).png" clas="h1">
-</div>
-<div>
-        <img src="Frame 3384530.png" class="h2">
-
+<header class="main-header">
+    <div class="logo">
+        <a href="#" ><img src=""</a>
     </div>
-    <div>
-        <img src="About Section Group.png" class="h4">
-    </div>
-   <div>
-    <img src="about us discription.png" class="h5">
-   </div>
-   <div>
-    <img src="Meet Farmers Section.png"class="h6">
-
+    <nav class="main-nav">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="header-right">
+        </div>
+</header>
     
 </body>
 </html>
